dataset1235/2025-2/1379599236/users/4187943595/executions/2110095464_2862582401.log
== RUN (2025-08-25 18:56:01)
-- CODE: 
obj = input("Nome do Objeto: ")
rep = int(input("Repetições: "))
bglh = "Abra "

result = bglh+obj
result2 = result*rep

print("_"result2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
-- ERROR:
File "XXXX", line 8
    print("_"result2)
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
caixa
1
---- correct output:
Abra caixa
-- ERROR:
File "XXXX", line 8
    print("_"result2)
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
sacola
6
---- correct output:
Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola
-- ERROR:
File "XXXX", line 8
    print("_"result2)
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
casa
3
---- correct output:
Abra casa Abra casa Abra casa
-- ERROR:
File "XXXX", line 8
    print("_"result2)
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- ERROR:
File "XXXX", line 8
    print("_"result2)
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
porta
4
---- correct output:
Abra porta Abra porta Abra porta Abra porta
-- ERROR:
File "XXXX", line 8
    print("_"result2)
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 18:49:36)
-- CODE: 
obj = input("Nome do Objeto: ")
rep = input("Repetições: ")
bglh = "Abra"

result = bglh+obj
print(result)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Nome do Objeto: Repetições: Abracarro
-- TEST CASE 2:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Nome do Objeto: Repetições: Abracaixa
-- TEST CASE 3:
---- input:
sacola
6
---- correct output:
Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola
---- user output:
Nome do Objeto: Repetições: Abrasacola
-- TEST CASE 4:
---- input:
casa
3
---- correct output:
Abra casa Abra casa Abra casa
---- user output:
Nome do Objeto: Repetições: Abracasa
-- TEST CASE 5:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Nome do Objeto: Repetições: Abralivro
-- TEST CASE 6:
---- input:
porta
4
---- correct output:
Abra porta Abra porta Abra porta Abra porta
---- user output:
Nome do Objeto: Repetições: Abraporta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 18:51:03)
-- CODE: 
obj = input("Nome do Objeto: ")
rep = float(input("Repetições: "))
bglh = "Abra "

result = bglh+obj
result2 = result*rep

print(result2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    result2 = result*rep
              ~~~~~~^~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
caixa
1
---- correct output:
Abra caixa
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    result2 = result*rep
              ~~~~~~^~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
sacola
6
---- correct output:
Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    result2 = result*rep
              ~~~~~~^~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
casa
3
---- correct output:
Abra casa Abra casa Abra casa
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    result2 = result*rep
              ~~~~~~^~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    result2 = result*rep
              ~~~~~~^~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
porta
4
---- correct output:
Abra porta Abra porta Abra porta Abra porta
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    result2 = result*rep
              ~~~~~~^~~~
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 18:59:49)
-- CODE: 
obj = input("Nome do Objeto:")
rep = int(input("Repetições: "))
bglh = "Abra "
espaço = " "
result = bglh+obj+espaço 
result2 = (result*rep)

print(result2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Nome do Objeto:Repetições: Abra carro Abra carro
-- TEST CASE 2:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Nome do Objeto:Repetições: Abra caixa
-- TEST CASE 3:
---- input:
sacola
6
---- correct output:
Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola
---- user output:
Nome do Objeto:Repetições: Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola
-- TEST CASE 4:
---- input:
casa
3
---- correct output:
Abra casa Abra casa Abra casa
---- user output:
Nome do Objeto:Repetições: Abra casa Abra casa Abra casa
-- TEST CASE 5:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Nome do Objeto:Repetições: Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 6:
---- input:
porta
4
---- correct output:
Abra porta Abra porta Abra porta Abra porta
---- user output:
Nome do Objeto:Repetições: Abra porta Abra porta Abra porta Abra porta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 18:58:48)
-- CODE: 
obj = input("Nome do Objeto:")
rep = int(input("Repetições: "))
bglh = "Abra "
espaço = " "
result = bglh+obj+espaço 
result2 = (result*rep)

print(result2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Nome do Objeto:Repetições: Abra carro Abra carro
-- TEST CASE 2:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Nome do Objeto:Repetições: Abra caixa
-- TEST CASE 3:
---- input:
sacola
6
---- correct output:
Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola
---- user output:
Nome do Objeto:Repetições: Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola
-- TEST CASE 4:
---- input:
casa
3
---- correct output:
Abra casa Abra casa Abra casa
---- user output:
Nome do Objeto:Repetições: Abra casa Abra casa Abra casa
-- TEST CASE 5:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Nome do Objeto:Repetições: Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 6:
---- input:
porta
4
---- correct output:
Abra porta Abra porta Abra porta Abra porta
---- user output:
Nome do Objeto:Repetições: Abra porta Abra porta Abra porta Abra porta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 18:49:54)
-- CODE: 
obj = input("Nome do Objeto: ")
rep = input("Repetições: ")
bglh = "Abra "

result = bglh+obj
print(result)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Nome do Objeto: Repetições: Abra carro
-- TEST CASE 2:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Nome do Objeto: Repetições: Abra caixa
-- TEST CASE 3:
---- input:
sacola
6
---- correct output:
Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola
---- user output:
Nome do Objeto: Repetições: Abra sacola
-- TEST CASE 4:
---- input:
casa
3
---- correct output:
Abra casa Abra casa Abra casa
---- user output:
Nome do Objeto: Repetições: Abra casa
-- TEST CASE 5:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Nome do Objeto: Repetições: Abra livro
-- TEST CASE 6:
---- input:
porta
4
---- correct output:
Abra porta Abra porta Abra porta Abra porta
---- user output:
Nome do Objeto: Repetições: Abra porta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 18:52:13)
-- CODE: 
obj = input("Nome do Objeto: ")
rep = int(input("Repetições: "))
bglh = "Abra "

result = bglh+obj
result2 = result*rep

print(result2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Nome do Objeto: Repetições: Abra carroAbra carro
-- TEST CASE 2:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Nome do Objeto: Repetições: Abra caixa
-- TEST CASE 3:
---- input:
sacola
6
---- correct output:
Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola
---- user output:
Nome do Objeto: Repetições: Abra sacolaAbra sacolaAbra sacolaAbra sacolaAbra sacolaAbra sacola
-- TEST CASE 4:
---- input:
casa
3
---- correct output:
Abra casa Abra casa Abra casa
---- user output:
Nome do Objeto: Repetições: Abra casaAbra casaAbra casa
-- TEST CASE 5:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Nome do Objeto: Repetições: Abra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livro
-- TEST CASE 6:
---- input:
porta
4
---- correct output:
Abra porta Abra porta Abra porta Abra porta
---- user output:
Nome do Objeto: Repetições: Abra portaAbra portaAbra portaAbra porta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 18:53:41)
-- CODE: 
obj = input("Nome do Objeto: ")
rep = int(input("Repetições: "))
bglh = "Abra "

result = bglh+obj
result2 = result*rep

print(result2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Nome do Objeto: Repetições: Abra carroAbra carro
-- TEST CASE 2:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Nome do Objeto: Repetições: Abra caixa
-- TEST CASE 3:
---- input:
sacola
6
---- correct output:
Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola
---- user output:
Nome do Objeto: Repetições: Abra sacolaAbra sacolaAbra sacolaAbra sacolaAbra sacolaAbra sacola
-- TEST CASE 4:
---- input:
casa
3
---- correct output:
Abra casa Abra casa Abra casa
---- user output:
Nome do Objeto: Repetições: Abra casaAbra casaAbra casa
-- TEST CASE 5:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Nome do Objeto: Repetições: Abra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livro
-- TEST CASE 6:
---- input:
porta
4
---- correct output:
Abra porta Abra porta Abra porta Abra porta
---- user output:
Nome do Objeto: Repetições: Abra portaAbra portaAbra portaAbra porta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 18:51:28)
-- CODE: 
obj = input("Nome do Objeto: ")
rep = float(input("Repetições: "))
bglh = "Abra "

result = bglh+obj
result2 = result*rep

print(result2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    result2 = result*rep
              ~~~~~~^~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
caixa
1
---- correct output:
Abra caixa
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    result2 = result*rep
              ~~~~~~^~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
sacola
6
---- correct output:
Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    result2 = result*rep
              ~~~~~~^~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
casa
3
---- correct output:
Abra casa Abra casa Abra casa
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    result2 = result*rep
              ~~~~~~^~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    result2 = result*rep
              ~~~~~~^~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
porta
4
---- correct output:
Abra porta Abra porta Abra porta Abra porta
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    result2 = result*rep
              ~~~~~~^~~~
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 18:51:34)
-- CODE: 
obj = input("Nome do Objeto: ")
rep = float(input("Repetições: "))
bglh = "Abra "

result = bglh+obj
result2 = result*rep

print(result2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    result2 = result*rep
              ~~~~~~^~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
caixa
1
---- correct output:
Abra caixa
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    result2 = result*rep
              ~~~~~~^~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
sacola
6
---- correct output:
Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    result2 = result*rep
              ~~~~~~^~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
casa
3
---- correct output:
Abra casa Abra casa Abra casa
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    result2 = result*rep
              ~~~~~~^~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    result2 = result*rep
              ~~~~~~^~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
porta
4
---- correct output:
Abra porta Abra porta Abra porta Abra porta
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    result2 = result*rep
              ~~~~~~^~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
